# llm-from-scratch

./: .gitignore  .syncignore  AGENT.md  ISSUES.md  IssuesToWorkOn.md  PLAN.md  PROGRESS.md  docs-task.md  pyproject.toml  setup_vast_pod.sh  sync.sh  train.sh
docs/: .gitignore  Makefile  llm_review_guide.tex  preamble.tex
docs/chapters/: chapter1_tokenization.tex  chapter2_attention.tex  chapter3_gpt_architecture.tex  chapter4_pretraining.tex  chapter5_pretrained_weights.tex  chapter6_finetuning.tex  chapter7_modern_architecture.tex  preface.tex
examples/: README.md  inf.py  tokens.py  weighted_sampling.py
examples/attention/: attention.py  flash_attention.py  kv_cache.py  qkv.py  scaled_dot_product.py  visualization_glove.ipynb
examples/data/: dataset.py
examples/model/: base.py  classification.py  gradient_flow_comparison.py  norm.py  transformer.py  transformer_with_topk.py  transformer_without_topk.py
examples/pretrained/: generate.py
examples/tokenizers/: bpe.py  compare_tokenizers.py  test_bpe_corpus.py  tiktoken_tokenizer.py
examples/training/: causallm.py  classification.py  evaluation.py  instruction.py  trainer.py
scripts/: README.md
scripts/finetuning/: classification.py  instruction.py
scripts/pretraining/: evaluation.py  train.py  train_tiny.py
src/llm_from_scratch/: __init__.py  tokens.py  utils.py
src/llm_from_scratch/attention/: attention.py  qkv.py  scaled_dot_product.py  simplified.py
src/llm_from_scratch/data/: classification.py  dataset.py  instruction.py  loader.py
src/llm_from_scratch/examples/attention/: attention_visualization.ipynb  gpt2_attn_vis.ipynb  simplified.py
src/llm_from_scratch/examples/data/: dataset_tiny_shakespeare.py
src/llm_from_scratch/examples/model/: load_pretrianed_hf.py  load_pretrianed_ours.py  transformer_with_topk.py
src/llm_from_scratch/examples/pretrained/: evaluate_gpt2.py  evaluate_gpt2_hf.py
src/llm_from_scratch/examples/tokenizers/: simple.py
src/llm_from_scratch/examples/training/: evaluation.py  train_cloud.py  trainer.py
src/llm_from_scratch/model/: base.py  causallm.py  classification.py  embeddings.py  lora.py  norm.py  pretrained.py  rope.py  transformer.py
src/llm_from_scratch/tokenizers/: base.py  bpe.py  simple.py  tiktoken_adapter.py
src/llm_from_scratch/training/: __init__.py  base.py  causallm.py  classification.py  evaluate.py  evaluate_hf.py  evaluation.py  trainer.py
tests/attention/: test_attention.py
