[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rafid K.", email = "rafidka@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.3",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
]

[project.scripts]
llm-from-scratch = "llm_from_scratch:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "gensim>=4.4.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "transformers>=5.4.0",
]

# ---------- Ruff ----------
[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"


# ---------- Pyright ----------
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
venvPath = "."
venv = ".venv"
